# tw_trademarket_info

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/: app.py
src/core/: config.py  csv_json.py  http.py  storage.py  validate.py
src/registry/: catalog.json  catalog.py  new_catalog.json  storage.py
src/sources/: dispatcher.py
tests/: test_utils.py
